# ai-navigator

./: .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  pyproject.toml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  route.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  INDEX.md  MODULE_REFERENCE.md  ONBOARDING.md
k8s_operator/: handlers.py  main.py
manifests/agents/deployment-monitor/: agent-cr.yaml
manifests/agents/model-catalog/: agent-cr.yaml
manifests/agents/resource-provisioning/: agent-cr.yaml
manifests/agents/supervisor/: agent-cr.yaml
manifests/crds/: agent-crd.yaml
manifests/operator/: deployment.yaml  namespace.yaml  rbac.yaml  serviceaccount.yaml
manifests/serving/: inference-service.yaml  serving-runtime.yaml
manifests/trustyai/: guardrails-orchestrator.yaml
operator/: __init__.py  handlers.py  main.py  reconciler.py
src/ai_navigator/: __init__.py  cli.py  config.py  router.py
src/ai_navigator/a2a/: __init__.py  agent_card.py  base_agent.py  client.py  message.py  skills.py  task.py
src/ai_navigator/agents/: __init__.py
src/ai_navigator/agents/deployment_monitor/: __init__.py  agent.py  skills.py
src/ai_navigator/agents/model_catalog/: __init__.py  agent.py  skills.py
src/ai_navigator/agents/resource_provisioning/: __init__.py  agent.py  skills.py
src/ai_navigator/agents/supervisor/: __init__.py  agent.py  aggregator.py  decomposer.py  delegator.py  skills.py
src/ai_navigator/deployment/: __init__.py  generator.py  orchestrator.py  validators.py
src/ai_navigator/llm/: __init__.py  client.py  prompts.py
src/ai_navigator/mcp/: __init__.py  cache.py  client.py  observability_tools.py  openshift_ai_tools.py  orchestrator.py  recovery.py  trustyai_tools.py
src/ai_navigator/models/: __init__.py  capacity.py  deployment.py  workflow.py
src/ai_navigator/planning/: __init__.py  capacity.py  recommender.py  whatif.py
src/ai_navigator/quickstarts/: __init__.py  engine.py
src/ai_navigator/quickstarts/tasks/: __init__.py  connection.py  deploy_model.py  project.py  serving_runtime.py  test_inference.py
src/ai_navigator/registry/: __init__.py  benchmarks.py  cache.py  client.py  models.py
src/ai_navigator/state/: __init__.py  manager.py  memory.py  postgres.py
src/ai_navigator/templates/: hpa.yaml.j2  inferenceservice.yaml.j2
src/ai_navigator/workflow/: __init__.py  engine.py
src/ai_navigator/workflow/stages/: __init__.py  base.py  benchmark.py  deploy.py  filter.py  intent.py  monitor.py  replicas.py  slo.py  traffic.py
tests/: __init__.py
tests/integration/: __init__.py  test_delegation.py
tests/unit/: __init__.py  test_a2a_base.py  test_agents.py  test_capacity.py  test_decomposer.py  test_deployment.py  test_mcp_tools.py  test_models.py  test_state.py
