[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-navigator"
version = "0.1.0"
description = "Kubernetes-native Supervisor/Sub-Agent system for OpenShift AI capacity planning"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Red Hat", email = "ai-navigator@redhat.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # A2A Protocol
    "a2a-sdk>=0.3.22",
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # HTTP Client
    "httpx>=0.28.0",
    # Data Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Kubernetes
    "kopf>=1.38.0",
    "kubernetes>=32.0.0",
    # MCP Protocol
    "mcp>=1.6.0",
    # Observability
    "prometheus-client>=0.21.0",
    # Utilities
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
ai-navigator = "ai_navigator.cli:main"

[project.urls]
Homepage = "https://github.com/redhat-et/ai-navigator"
Documentation = "https://github.com/redhat-et/ai-navigator/docs"
Repository = "https://github.com/redhat-et/ai-navigator"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_navigator", "operator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "operator", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["ai_navigator", "operator"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
